--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,10 @@ ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-pattern
 
 dependencies:
   - base >= 4.7 && < 5
+  - ghc-prim
+  - first-class-families
+  - aeson
+  - text
 
 executable:
     source-dirs:      app
@@ -22,14 +26,19 @@ executable:
       - megarecord
       - servant-server
       - warp
-      - aeson
 
 library:
   source-dirs: src
   exposed-modules:
-    - Megarecord
-  dependencies:
-    - ghc-prim
-    - first-class-families
-    - aeson
-    - text
+    - Data.Kind.Row
+    - Data.Kind.RowList
+    - Data.Record
+
+tests:
+  spec:
+    main: Tests.hs
+    source-dirs:
+      - src
+      - test
+    dependencies:
+      - inspection-testing
